grammar.js
    source_file: ($) => repeat($._item),

    // ── Comments ──────────────────────────────────────────────────
    _item: ($) =>
      choice(
        $.struct_def,
        $.state_def,
        $.variant_def,
        $.event_def,
        $.failure_def,
        $.failure_policy_def,
        $.message_def,
        $.command_def,
        $.actor_def,
        $.lifecycle_def,
        $.capability_def,
        $.flow_def,
        $.verify_def,
        $.usecase_def,
        $.scenario_def,
        $.subsystem_def,
        $.layer_def,
        $.dependency_rule_def,
        $.module_def,
        $.decision_def,
        $.interface_def,
        $.storage_def,
        $.config_def,
        $.dataflow_def,
        $.target_def,
        $.simple_binding,
        $.binding_def,
        $.region_def,
        $.view_impl_def,
        $.retry_policy_def,
        $.node_def,
        $.resource_def,
        $.network_def,
        $.link_def,
        $.assembly_def,
        $.profile_def,
      ),

    // ── Meta ──────────────────────────────────────────────────────
    meta_block: ($) => seq("meta", "{", repeat($.meta_stmt), "}"),

    meta_stmt: ($) =>
      choice(
        seq("label", field("locale", $.locale), field("value", $.text)),
        seq("summary", field("locale", $.locale), field("value", $.text)),
        seq("description", field("locale", $.locale), field("value", $.text)),
        seq("alias", field("locale", $.locale), field("value", $.text)),
        seq("tag", field("tag", $.text)),
        $.setting,
      ),

    // ── Usecase ───────────────────────────────────────────────────
    usecase_def: ($) =>
      seq("usecase", field("name", $.identifier), "{", repeat($.usecase_stmt), "}"),

    usecase_stmt: ($) =>
      choice(
        $.meta_block,
        seq("actor", field("actor", $.ref)),
        seq("trigger", field("trigger", $.ref)),
        seq("outcome", field("outcome", $.ref)),
        seq("flow", field("flow", $.ref)),
        seq("scenario", field("scenario", $.ref)),
        seq("verify", field("verify", $.ref)),
        $.usecase_variant_def,
        $.usecase_failure_def,
      ),

    subsystem_def: ($) =>
      seq(
        "subsystem",
        optional(angle(field("kind", $.identifier))),
        field("name", $.identifier),
        "{",
        repeat($.subsystem_stmt),
        "}",
      ),

    subsystem_stmt: ($) =>
      choice($.meta_block, seq("uses", "module", field("modules", $.ref_list)), seq("uses", field("items", $.ref_list)), $.setting),

    // ── Struct ────────────────────────────────────────────────────
    struct_def: ($) =>
      seq(
        "struct",
        optional(angle(field("params", $.identifier_list))),
        field("name", $.identifier),
        optional($.implements_clause),
        "{",
        repeat($.struct_body),
        "}",
      ),

    implements_clause: ($) => seq("implements", field("caps", $.ref_list)),

    struct_body: ($) => choice($.meta_block, $.struct_op_def, $.send_stmt, $.field_def),

    field_def: ($) =>
      seq(optional("unique"), field("name", $.identifier), optional(seq(":", field("type", $.ref)))),

    struct_op_def: ($) =>
      seq(
        "op",
        optional(angle(field("strategy", $.op_strategy))),
        field("name", $.ref),
        optional(seq("(", optional($.identifier_list), ")")),
        optional(";"),
      ),

    send_stmt: ($) =>
      seq(
        "send",
        optional(angle(field("mode", $.send_mode))),
        field("event", $.ref),
        arrow($),
        field("target", $.ref),
        optional(seq("{", repeat($.assignment), "}")),
      ),

    send_mode: (_$) => choice("sync", "async"),

    op_strategy: (_$) => choice("sync", "async"),

    // ── State ─────────────────────────────────────────────────────
    state_def: ($) => seq("state", optional(angle(field("kind", $.identifier))), field("name", $.identifier), "{", repeat($.state_value), "}"),

    state_value: ($) => field("name", $.identifier),

    event_def: ($) => seq("event", field("name", $.identifier), "{", repeat(choice($.meta_block, $.event_field)), "}"),

    event_field: ($) => seq(field("name", $.identifier), optional(seq(":", field("type", $.ref)))),

    // ── Scenario ──────────────────────────────────────────────────
    scenario_def: ($) => seq("scenario", field("name", $.identifier), "{", repeat($.scenario_stmt), "}"),

    scenario_stmt: ($) =>
      choice(
        $.meta_block,
        seq("participant", field("participant", $.ref)),
        $.scenario_send_stmt,
        $.scenario_alt_block,
      ),

    scenario_send_stmt: ($) =>
      seq(
        field("sender", $.ref),
        "send",
        optional(angle(field("mode", $.send_mode))),
        field("event", $.ref),
        arrow($),
        field("receiver", $.ref),
      ),

    scenario_alt_block: ($) =>
      seq(
        "alt",
        field("name", $.identifier),
        optional(seq("when", field("predicate", $.predicate_call))),
        "{",
        repeat($.scenario_stmt),
        "}",
      ),

    // ── Failure ───────────────────────────────────────────────────
    interface_def: ($) => seq("interface", optional(angle(field("kind", $.identifier))), field("name", $.identifier), "{", repeat(choice($.meta_block, $.interface_entry)), "}"),

    interface_entry: ($) => seq("entry", field("name", $.identifier), "{", repeat($.interface_entry_stmt), "}"),

    interface_entry_stmt: ($) =>
      choice(
        $.meta_block,
        seq("actor", field("actor", $.ref)),
        seq("input", field("input", $.ref)),
        seq("output", field("output", $.ref)),
        seq("calls", field("calls", $.ref)),
        $.setting,
      ),

    // ── Storage ───────────────────────────────────────────────────
    storage_def: ($) =>
      seq(
        "storage",
        field("name", $.identifier),
        angle(field("kind", $.storage_kind)),
        "for",
        field("target", $.storage_target_list),
        "{",
        repeat($.storage_stmt),
        "}",
      ),

    storage_kind: (_$) => choice("table", "document", "key_value", "queue", "object", "search", "graph", "cache"),

    storage_stmt: ($) => choice($.meta_block, seq("durability", field("durability", $.durability_kind)), $.setting),

    durability_kind: (_$) => choice("transient", "persistent", "derived"),

    // ── Config ────────────────────────────────────────────────────
    config_def: ($) =>
      seq("config", field("name", $.identifier), "for", field("target", $.ref), "{", repeat($.config_stmt), "}"),

    config_stmt: ($) => choice($.meta_block, $.config_item, seq("validate", field("validate", choice($.condition, $.text)))),

    config_item: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.ref),
        choice(seq("{", repeat($.config_item_stmt), "}"), "{}"),
      ),

    config_item_stmt: ($) =>
      choice(seq("required", field("required", $.identifier)), seq("default", "{", repeat($.setting), "}"), seq("validate", field("validate", choice($.condition, $.text))), $.setting),

    // ── Dataflow ──────────────────────────────────────────────────
    dataflow_def: ($) => seq("dataflow", field("name", $.identifier), "{", repeat($.dataflow_stmt), "}"),

    dataflow_stmt: ($) => choice($.meta_block, $.data_node_stmt, $.data_edge_stmt),

    data_node_stmt: ($) =>
      seq("node", angle(field("kind", $.data_node_kind)), field("target", $.ref), optional(seq("{", repeat($.data_node_body), "}"))),

    data_node_kind: (_$) =>
      choice("actor", "message", "event", "struct", "storage", "flow", "cap", "module", "transform", "gateway", "external", "resource"),

    data_edge_stmt: ($) =>
      seq(
        "edge",
        angle(field("mode", $.data_edge_mode)),
        field("from", $.ref),
        arrow($),
        field("to", $.ref),
        "{",
        repeat($.data_edge_body),
        "}",
      ),

    data_edge_body: ($) => choice(seq("data", field("data", $.path_list)), $.setting),

    data_edge_mode: (_$) => choice("read", "write", "transform", "call", "return", "emit", "trigger", "publish", "consume"),

    // ── Target ────────────────────────────────────────────────────
    target_def: ($) =>
      seq(
        "target",
        "<",
        field("kind", $.target_kind),
        optional(seq(",", field("surface", $.target_surface))),
        ">",
        optional(field("name", $.name_symbol)),
        "{",
        repeat($.target_stmt),
        "}",
      ),

    target_kind: (_$) => choice("bin", "lib", "mod", "site", "app", "platform"),

    binding_def: ($) =>
      choice($.interface_binding, $.storage_binding, $.config_binding),

    interface_binding: ($) =>
      seq("bind", field("interface", $.ref), optional(seq("by", field("protocol", $.protocol_binding))), "{", repeat($.interface_binding_entry), "}"),

    interface_binding_entry: ($) => seq("entry", field("name", $.identifier), "{", repeat($.interface_binding_stmt), "}"),

    interface_binding_stmt: ($) =>
      choice(
        seq("route", field("method", $.identifier), field("path", $.text)),
        seq("input", field("type", $.ref)),
        prec(1, seq("output", field("type", $.ref), "status", field("status", $.integer))),
        seq("output", field("type", $.ref)),
        seq("status", field("status_ref", $.ref), field("status", $.integer)),
        $.setting,
      ),

    storage_binding: ($) =>
      seq("bind", field("storage", $.ref), "to", field("adapter", $.storage_adapter), "{", repeat($.storage_binding_stmt), "}"),

    storage_adapter: ($) => seq(field("kind", $.storage_adapter_kind), angle(field("target", $.name_symbol))),

    storage_adapter_kind: (_$) => choice("cache", "sqldb", "document", "key_value", "search", "queue", "object", "graph"),

    storage_binding_stmt: ($) =>
      choice(seq("table", field("table", $.identifier)), seq("primary_key", field("primary_key", $.identifier)), seq("index", field("index", $.identifier)), $.setting),

    config_binding: ($) =>
      seq("bind", field("config", $.ref), "to", field("provider", $.config_provider), "{", repeat($.config_binding_stmt), "}"),

    config_provider: ($) => choice(seq("file", angle(field("format", $.config_file_format))), "env"),

    config_file_format: (_$) => choice("toml", "yaml", "json"),

    config_binding_stmt: ($) => choice($.path_binding, $.content_binding, seq("reload", field("reload", $.identifier)), $.setting),

    path_binding: ($) => seq("path", "{", repeat($.path_binding_stmt), "}"),

    path_binding_stmt: ($) =>
      choice(seq("env", field("env", $.identifier)), seq("default", field("default", $.text)), seq("required", field("required", $.boolean))),

    simple_binding: ($) =>
      prec(2, seq("bind", field("source", $.binding_source), "to", field("target", $.identifier), optional(seq("with", field("view", $.identifier))))),

    // ── Lifecycle ─────────────────────────────────────────────────
    lifecycle_def: ($) =>
      seq("lifecycle", field("name", $.identifier), "for", field("target", $.path), "{", repeat($.lifecycle_stmt), "}"),

    lifecycle_stmt: ($) => choice(seq("initial", field("state", $.identifier)), $.transition_stmt, $.forbid_stmt),

    transition_stmt: ($) => seq("transition", field("from", $.identifier), arrow($), field("to", $.identifier), "on", field("event", $.ref)),

    capability_def: ($) => seq("cap", field("name", $.identifier), "{", repeat(choice($.meta_block, $.operation_def)), "}"),

    operation_def: ($) =>
      choice(
        seq(optional("async"), "op", field("name", $.identifier), "{", repeat($.operation_stmt), "}"),
        seq("op", optional(angle(field("strategy", $.op_strategy))), field("name", $.identifier), "{", repeat($.operation_stmt), "}"),
      ),

    operation_stmt: ($) => choice(seq("input", field("input", $.path)), seq("ack", field("event", $.ref)), seq("result", field("event", $.ref)), $.setting),

    // ── Flow ──────────────────────────────────────────────────────
    flow_def: ($) =>
      seq("flow", optional(angle(field("kind", $.identifier))), field("name", $.identifier), optional(seq("when", field("predicate", $.predicate_call))), "{", repeat($.flow_stmt), "}"),

    flow_stmt: ($) =>
      choice(
        $.meta_block,
        seq("actor", field("actor", $.ref)),
        seq("trigger", field("trigger", $.ref)),
        seq("depends", field("depends", $.ref_list)),
        seq("creates", field("creates", $.ref_list)),
        $.require_block,
        $.step_def,
        $.ensure_block,
        $.react_block,
      ),

    step_def: ($) =>
      seq(
        "step",
        field("name", $.identifier),
        optional(seq(arrow($), field("event", $.ref), optional("?"))),
        "{",
        repeat($.step_stmt),
        "}",
      ),

    step_stmt: ($) => choice($.on_block, $.event_guard, $.call_stmt, $.create_stmt, $.emit_stmt, $.ensure_block, $.match_block),

    call_stmt: ($) => seq("call", optional("async"), field("operation", $.op_path), optional("with"), optional($.call_policy_block)),

    call_policy_block: ($) => seq("{", repeat($.call_policy_stmt), "}"),

    call_policy_stmt: ($) => choice($.retry_block, $.timeout_policy, $.use_policy),

    retry_block: ($) => choice(seq("retry", "{", repeat($.retry_stmt), "}"), seq("retry", field("policy", $.identifier))),

    retry_stmt: ($) => choice(seq("max", field("max", $.integer)), $.backoff_stmt),

    backoff_stmt: ($) =>
      seq(
        "backoff",
        field("strategy", $.backoff_strategy),
        optional(seq("from", field("from", $.duration))),
        optional(choice(seq("step", field("step", $.duration)), seq("factor", field("factor", $.integer)))),
      ),

    backoff_strategy: (_$) => choice("constant", "linear", "exponential"),

    timeout_policy: ($) => seq("timeout", field("timeout", $.duration), arrow($), field("event", $.ref)),

    match_block: ($) => seq("match", "{", repeat($.match_arm), "}"),

    match_arm: ($) => seq(choice(field("predicate", $.predicate_call), "_"), arrow($), field("target", $.ref)),

    react_block: ($) =>
      seq("react", angle(field("strategy", $.react_strategy)), field("event", $.ref), "{", repeat($.step_def), "}"),

    react_strategy: (_$) => choice("sync", "async"),

    retry_policy_def: ($) => seq("retry_policy", field("name", $.identifier), "{", repeat($.retry_stmt), "}"),

    // ── Verify ────────────────────────────────────────────────────
    verify_def: ($) =>
      seq("verify", field("name", $.identifier), "for", "flow", field("flow", $.ref), "{", repeat($.verify_stmt), "}"),

    verify_stmt: ($) => choice($.given_block, $.given_inline, $.mock_stmt, $.when_stmt, $.expect_block, $.expect_inline, $.ensure_no_violation_stmt),

    given_block: ($) => seq("given", "{", repeat($.given_stmt), "}"),

    given_inline: ($) => seq("given", $.given_stmt),

    given_stmt: ($) => seq(field("target", $.path), $.assign_op, field("value", $.expr)),

    assign_op: (_$) => choice("=", ">="),

    mock_stmt: ($) => seq("mock", field("operation", $.op_path), arrow($), $.mock_outcome, optional($.mock_body)),

    mock_outcome: ($) => choice($.ref, "timeout", seq("failure", field("failure", $.ref))),

    mock_body: ($) => seq("{", repeat($.assignment), "}"),

    when_stmt: ($) => seq("when", field("command", $.ref)),

    expect_block: ($) => seq("expect", "{", repeat($.condition), "}"),

    expect_inline: ($) => seq("expect", $.condition),

    module_def: ($) =>
      seq(
        "module",
        optional(angle(field("kind", $.identifier))),
        field("name", $.identifier),
        "{",
        repeat($.module_stmt),
        "}",
      ),

    region_def: ($) =>
      seq("region", optional(angle(field("kind", $.region_kind))), field("name", $.identifier), "{", repeat($.region_stmt), "}"),

    region_kind: (_$) => choice("page", "window", "section", "panel", "area"),

    orientation_kind: (_$) => choice("vertical", "horizontal", "grid"),
